Correcting issue with .lead, which was causing overflow issues.

--- a/public/css/front-end/header.styl
+++ b/public/css/front-end/header.styl
@@ -1,4 +1,4 @@
-.container
+header
   margin-top 19px
 
 .header-title
@@ -38,8 +38,8 @@ h1.blog-title, .navbar-nav li
 
 .lead
 
-  margin 19px -100% 0 -100%
-  padding 40px 100%
+  margin 19px 0 0 0
+  padding 40px 0
 
   background-color #f5f5f5
   text-align center
